# dysturbance

./: .gitignore  README.md  docker_gen.m
Code_Dysturbance/: run_global_pi  run_local_pi
Code_Dysturbance/src/: Absorbed_Energy_KPI.m  Collect_Local_PI.m  Compute_Global_PI.m  Compute_Local_PI.m  Dysturbance_raw_data_extraction.m  Excited_equivalent_impedance.m  Global_absorbed_Energy_PI.m  Global_excited_impedance.m  Global_stability_margins.m  Stability_margin.m  Structure_data_extraction.m  check_isfall.m  normalization_factor.m
Code_Dysturbance/tests/: test_docker_call.py
Code_Dysturbance/tests/data/input/: subject_10_anthropometry.yaml  subject_10_trial_01.csv
Code_Dysturbance/tests/data/output/: step_length_left.yaml
Data_processing/Dysturbance_data_processing/: Absorbed_Energy_KPI.m  Complessive_system_stability_margins.m  Dysturbance_Performance_evaluation.m  Dysturbance_Raw_processing.m  Dysturbance_raw_data_extraction.m  Excitated_equivalent_impedance.m  Global_absorbed_Energy_PI.m  Global_excited_impedance.m  Raw_data_processing_.m  Stability_margin.m  Structure_data_extraction.m  dati struttura.txt  dati_struttura_tmp.yaml  normalization_factor.m  prova.txt
Data_processing/Dysturbance_data_processing/data_folder/M_2/: M_2.csv
Datasheets/: readme.md
Documentation/: readme.md
Dysturbance_Pi/: README.md  install.sh  package_install.m  run_Global_PI.bat  run_Global_PI.m  run_Local_PI.bat  run_Local_PI.m  run_global_pi  run_global_pi.m  run_local_pi  run_local_pi.m
Dysturbance_Pi/src/: Absorbed_Energy_KPI.m  Collect_Local_PI.m  Compute_Global_PI.asv  Compute_Global_PI.m  Compute_Local_PI.m  Compute_all_LOCAL_PI.m  Dysturbance_raw_data_extraction.m  Excited_equivalent_impedance.m  Global_absorbed_Energy_PI.m  Global_excited_impedance.m  Global_stability_margins.asv  Global_stability_margins.m  Impulsive_experiments_set.m  README.md  ReadYaml.m  Stability_margin.m  Structure_data_extraction.m  check_isfall.m  find_type.m  normalization_factor.m  read_simple_yaml.m  recalculate_all_PIs.m
Example-Data_Raw/: DATA_read_fun.m  multiple_data_read.asv  readme.md
code_pi/: Dockerfile  README.md  install.sh  run_global_pi  run_local_pi  todo.md
code_pi/src/: Absorbed_Energy_KPI.m  Collect_Local_PI.m  Compute_Global_PI.m  Compute_Local_PI.m  Excited_equivalent_impedance.m  README.md  Stability_margin.m  check_isfall.m  normalization_factor.m
code_pi/tests/data/output/: step_length_right.yaml  step_time_left.yaml  step_time_right.yaml  stride_time_left.yaml  stride_time_right.yaml
code_testbed/: LICENSE  README.md
code_testbed/dysturbance_ros/: CHANGELOG.rst
code_testbed/dysturbance_ros_control/: CHANGELOG.rst
code_testbed/dysturbance_ros_control/include/dysturbance_ros_control/: dysturbance_ros_control.h
code_testbed/dysturbance_ros_control/src/: dysturbance_ros_control.cpp
code_testbed/dysturbance_ros_hardware_interface/: CHANGELOG.rst  package.xml
code_testbed/dysturbance_ros_hardware_interface/include/dysturbance_ros_hardware_interface/: dysturbance_ros_hardware_interface.h
code_testbed/dysturbance_ros_hardware_interface/src/: dysturbance_ros_hardware_interface.cpp
code_testbed/dysturbance_ros_msgs/: CMakeLists.txt
code_testbed/dysturbance_ros_msgs/include/dysturbance_ros_msgs/: dysturbance_ros_msgs.h
code_testbed/dysturbance_ros_srvs/: CMakeLists.txt  package.xml
code_testbed/ros_dysturbance/dysturbance_ros/: package.xml
code_testbed/ros_dysturbance/dysturbance_ros_control/config/: config_pendulum.yaml  config_platform.yaml  config_protocol_1.yaml  config_protocol_2.yaml  config_protocol_3.yaml  config_protocol_4.yaml  config_protocol_5.yaml  config_subject.yaml
code_testbed/ros_dysturbance/dysturbance_ros_control/launch/: control_node_bringup.launch  data_acquisition.launch  generic_protocol.launch  generic_protocol_1.launch  generic_protocol_2.launch  generic_protocol_3.launch  generic_protocol_4.launch  generic_protocol_5.launch  reset_pendulum.launch
code_testbed/ros_dysturbance/dysturbance_ros_control/src/: dysturbance_ros_control.cpp
code_testbed/ros_dysturbance/dysturbance_ros_description/: CHANGELOG.rst  package.xml
code_testbed/ros_dysturbance/dysturbance_ros_hardware_interface/: CMakeLists.txt  package.xml
code_testbed/ros_dysturbance/dysturbance_ros_hardware_interface/src/: dysturbance_ros_hardware_interface.cpp
code_testbed/ros_dysturbance/dysturbance_ros_msgs/: package.xml
code_testbed/ros_dysturbance/dysturbance_ros_msgs/msg/: State.msg  StateStamped.msg
code_testbed/ros_opcua_communication/ros_opcua_impl_freeopcua/: CMakeLists.txt
code_testbed/sysmac_studio/: testbed_1.smc2
docs/: README.md
docs/datasheets/: README.md
docs/datasheets/Tyco Electronics/: wget-log
dysturbance_ros/: README.md
dysturbance_ros/dysturbance_ros/: CMakeLists.txt
dysturbance_ros/dysturbance_ros_control/: CMakeLists.txt  package.xml
dysturbance_ros/dysturbance_ros_control/include/dysturbance_ros_control/: dysturbance_ros_control.h
dysturbance_ros/dysturbance_ros_control/launch/: control_node_bringup.launch  protocol_tmp.launch
dysturbance_ros/dysturbance_ros_control/src/: dysturbance_ros_control.cpp  main.cpp
dysturbance_ros/dysturbance_ros_description/: CMakeLists.txt
dysturbance_ros/dysturbance_ros_hardware_interface/: CMakeLists.txt  package.xml
dysturbance_ros/dysturbance_ros_hardware_interface/include/dysturbance_ros_hardware_interface/: NIDAQmx.h  dysturbance_ros_hardware_interface.h
dysturbance_ros/dysturbance_ros_hardware_interface/src/: dysturbance_ros_hardware_interface.cpp
dysturbance_ros/dysturbance_ros_msgs/: CHANGELOG.rst  CMakeLists.txt
dysturbance_ros/dysturbance_ros_msgs/include/dysturbance_ros_msgs/: dysturbance_ros_msgs.h
dysturbance_ros/dysturbance_ros_msgs/msg/: State.msg
dysturbance_ros/dysturbance_ros_srvs/: CHANGELOG.rst
dysturbance_ros/dysturbance_ros_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
examples/data_raw/: DATA_CHECK.m  file_di_calibrazione.mat  multiple_data_read.m
examples/subject_1/protocol_1/subject_1_cond_1010201000/: protocol_check.csv
(+343 files in other folders)
